--- a/views/main.ejs
+++ b/views/main.ejs
@@ -382,7 +382,7 @@
 
        <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzQ3YHgkCgtq6rMH14-X-27Ntjb63TmvgpBBjWjO9F85gWnjCJy/exec">
         <div class="ui action input">
-         <input type="text" name="Email" placeholder="Email">
+         <input type="text" name="email" placeholder="Email">
          <button class="ui button" type="submit">Apply Now</button>
         </div>
        </form>
