--- a/views/main.ejs
+++ b/views/main.ejs
@@ -383,12 +383,12 @@
        <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzQ3YHgkCgtq6rMH14-X-27Ntjb63TmvgpBBjWjO9F85gWnjCJy/exec">
         <div class="ui action input">
          <input type="text" name="email" placeholder="Email">
-         <button class="ui button" type="submit">Apply Now</button>
+         <button class="ui button" type="submit">Apply</button>
         </div>
        </form>
 
        <div style="display:none;" id="thankyou_message">
-         <h2>Thanks! We will get back to you soon!</h2>
+         <h2>Thanks! We will update you soon 😊</h2>
        </div>
 
        <!-- <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
