--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -29,8 +29,8 @@
 
 .ui.inverted.header-section.segment, .ui.primary.inverted.segment {
     background: none;
-    /*background-color: rgb(0, 0, 0);*/
-    background-image: url('/speakers_images/background.png');
+    background-color: rgb(0, 0, 0);
+    /*background-image: url('/speakers_images/background.png');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
