--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -34,7 +34,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*/
 }
 
