--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -30,11 +30,11 @@
 .ui.inverted.header-section.segment, .ui.primary.inverted.segment {
     background: none;
     /*background-color: rgb(0, 0, 0);*/
-    /*background-image: url('/speakers_images/background.png');*/
+    background-image: url('/speakers_images/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    /*//background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);*/
     /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*/
 }
 
