--- a/views/main.ejs
+++ b/views/main.ejs
@@ -364,7 +364,7 @@
         </div>
        </form>
        <div style="display:none;" id="thankyou_message">
-         <h2>Thank you! Please check your indox for details.</h2>
+         <h2>Thanks! We will update you soon.</h2>
        </div>
        <!-- <div class="ui action input">
            <input type="text" name="email" placeholder="Email">
