--- a/views/main.ejs
+++ b/views/main.ejs
@@ -20,7 +20,7 @@
 
     <div class="ui inverted vertical header-section center aligned segment">
       <div class="ui text container">
-        <img class="ui image" src="/speakers_images/logo.png">
+        <img class="ui image" src="/speakers_images/logo2.png">
         <h1 class="ui inverted header">
           UNICON 2018
         </h1>
