Minor changes for 2019

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>UNICON 2018</title>
+    <title>UNICON 2019</title>
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
 
@@ -22,17 +22,17 @@
       <div class="ui text container">
         <img class="ui image" src="/speakers_images/logo2.png">
         <h1 class="ui inverted header">
-          UNICON 2018
+          UNICON 2019
         </h1>
         <h2>Asia's Largest Collegiate Entrepreneurship Conference</h2>
-        <h3>Feb 24 - 25, 2018</h3>
-        <h3>NUS, Singapore</h3>
+        <!-- <h3>Feb 24 - 25, 2018</h3>
+        <h3>NUS, Singapore</h3> -->
       </div>
    </div>
 
    <div class="ui borderless center aligned inverted main secondary menu">
      <div href="#" class="header item">
-       <h1 class="ui inverted header">UNICON 2018</h1>
+       <h1 class="ui inverted header">UNICON 2019</h1>
        <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register</a>
      </div>
      <div class="ui center aligned text container">
