--- a/views/main.ejs
+++ b/views/main.ejs
@@ -81,62 +81,62 @@
      </div>
      <div class="ui middle aligned equal width grid detail container">
        <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/yinglantan"><i class="linkedin icon"></i></a>
-         <h3 class="name">Yinglan Tan</h3>
-         <h3 class="title">Venture Partner</h3>
-         <h3 class="company">Sequoia Capital</h3>
-         <img class="ui rounded image" src="/speakers_images/yinglan.png">
+           <a href="https://en.wikipedia.org/wiki/Janil_Puthucheary"><i class="linkedin icon"></i></a>
+           <h3 class="name" id="janil">Dr Janil Puthucheary</h3>
+           <h3 class="title">Senior Minister of State</h3>
+           <h3 class="company">MCI &amp; MOE</h3>
+           <img class="ui rounded image" src="/speakers_images/janil.png">
        </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/willsoncuaca"><i class="linkedin icon"></i></a>
-         <h3 class="name">Wilson Cuaca</h3>
-         <h3 class="title">Managing Partner</h3>
-         <h3 class="company">East Ventures</h3>
-         <img class="ui rounded image" src="/speakers_images/wilson.png">
-       </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/limky"><i class="linkedin icon"></i></a>
-         <h3 class="name">Kuo-Yi Lim</h3>
-         <h3 class="title">Managing Partner</h3>
-         <h3 class="company">Monk's Hill Ventures</h3>
-         <img class="ui rounded image" src="/speakers_images/kuoyi.png">
-       </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/arnaudbonzom"><i class="linkedin icon"></i></a>
-         <h3 class="name">Arnaud Bonzom</h3>
-         <h3 class="title">Venture Partner</h3>
-         <h3 class="company">500 Startups</h3>
-         <img class="ui rounded image" src="/speakers_images/arnaud.png">
-       </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://sg.linkedin.com/in/yodchatri"><i class="linkedin icon"></i></a>
+             <h3 class="name">Chatri Sityodtong</h3>
+             <h3 class="title">Founder, CEO</h3>
+             <h3 class="company">ONE Championship</h3>
+             <img class="ui rounded image" src="/speakers_images/chatri.png">
+         </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://www.linkedin.com/in/oliver-tan-277b0127"><i class="linkedin icon"></i></a>
+             <h3 class="name">Oliver Tan</h3>
+             <h3 class="title">Co-Founder, CEO</h3>
+             <h3 class="company">Visenze</h3>
+             <img class="ui rounded image" src="/speakers_images/oliverNew.png">
+         </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://sg.linkedin.com/in/karlmaks"><i class="linkedin icon"></i></a>
+             <h3 class="name">Karl Mak</h3>
+             <h3 class="title">Co-Founder, CEO</h3>
+             <h3 class="company">Hepmil (SGAG &amp; MGAG)</h3>
+             <img class="ui rounded image" src="/speakers_images/karlNew.png">
+         </div>
 
        <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/cameronpriest"><i class="linkedin icon"></i></a>
-         <h3 class="name">Cameron Priest</h3>
-         <h3 class="title">Co-founder, CEO</h3>
-         <h3 class="company">Tradegecko</h3>
-         <img class="ui rounded image" src="/speakers_images/cameron.png">
-       </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/gracesai"><i class="linkedin icon"></i></a>
-         <h3 class="name">Grace Sai</h3>
-         <h3 class="title">Co-founder, CEO</h3>
-         <h3 class="company">The Hub Singapore</h3>
-         <img class="ui rounded image" src="/speakers_images/grace.png">
-       </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/vinodnair"><i class="linkedin icon"></i></a>
-         <h3 class="name">Vinod Nair</h3>
-         <h3 class="title">Founder, CEO</h3>
-         <h3 class="company">MoneySmart.Sg</h3>
-         <img class="ui rounded image" src="/speakers_images/vinod.png">
-       </div>
-       <div class="eight wide mobile four wide tablet four wide computer column">
-         <a href="https://sg.linkedin.com/in/pieterpaulwalraven"><i class="linkedin icon"></i></a>
-         <h3 class="name">Pieter Walraven</h3>
-         <h3 class="title">Product Manager</h3>
-         <h3 class="company">Google</h3>
-         <img class="ui rounded image" src="/speakers_images/pieter.png">
-       </div>
+        <a href="https://sg.linkedin.com/in/rachel-lim-25b3b262"><i class="linkedin icon"></i></a>
+        <h3 class="name">Rachel Lim</h3>
+        <h3 class="title">Co-Founder, CEO</h3>
+        <h3 class="company">Love, Bonito</h3>
+        <img class="ui rounded image" src="/speakers_images/rachel.png">
+      </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://sg.linkedin.com/in/dionesong"><i class="linkedin icon"></i></a>
+             <h3 class="name" id="dione">Dione Song</h3>
+             <h3 class="title">Chief Commercial Officer</h3>
+             <h3 class="company">Love, Bonito</h3>
+             <img class="ui rounded image" src="/speakers_images/dione.png">
+         </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://www.linkedin.com/in/oziamanat/"><i class="linkedin icon"></i></a>
+             <h3 class="name">Ozi Amanat</h3>
+             <h3 class="title">Founding Partner</h3>
+             <h3 class="company">K2 Global VC</h3>
+             <img class="ui rounded image" src="/speakers_images/ozi.png">
+         </div>
+         <div class="eight wide mobile four wide tablet four wide computer column">
+             <a href="https://sg.linkedin.com/in/sgjames"><i class="linkedin icon"></i></a>
+             <h3 class="name">James Tan</h3>
+             <h3 class="title">Managing Partner</h3>
+             <h3 class="company">Quest Ventures</h3>
+             <img class="ui rounded image" src="/speakers_images/jamesNew.png">
+         </div><!--
 
        <div class="eight wide mobile four wide tablet four wide computer column">
          <a href="https://sg.linkedin.com/in/stevefeiner"><i class="linkedin icon"></i></a>
@@ -194,7 +194,7 @@
          <h3 class="title">Head of Sales</h3>
          <h3 class="company">MyDoc</h3>
          <img class="ui rounded image" src="/speakers_images/william.png">
-       </div>
+       </div> -->
 
      </div>
    </div>
