--- a/views/main.ejs
+++ b/views/main.ejs
@@ -63,7 +63,8 @@
 
   <div class="ui borderless center aligned inverted main secondary menu">
     <div href="#" class="header item">
-      <img class="ui image" src="/speakers_images/uniconLogoSmall.png">
+      <img class="ui image" src="/speakers_images/uniconlogo2019.png">
+      <!--<img class="ui image" src="/speakers_images/uniconLogo1.png">-->
       <!-- <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button">Register</a> -->
     </div>
     <div class="ui center aligned text container">
@@ -102,7 +103,7 @@
       <h1 class="ui header" id="eventVenue">NUS, Singapore</h1>
     </div>
     <div class="ui text detail container">
-      <h3>UNICON 2018 is a two–day conference that serves to unite international student entrepreneurs, prominent founders,
+      <h3>UNICON 2018 was a two–day conference that serves to unite international student entrepreneurs, prominent founders,
         industry experts and venture capitalists. Each year, outstanding young entrepreneurs from across Asia are gathered, challenged and inspired through our activities line-up.
         Stay tuned for details on UNICON 2019!
       </h3>
@@ -257,104 +258,13 @@
         <img class="ui rounded image" src="/speakers_images/anna.png">
       </div>
     </div>
-
-    <div class="ui text header container">
-      <h1 class="ui header">Past Speakers</h1>
-    </div>
-    <div class="ui middle aligned equal width grid detail container">
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/yinglantan"><i class="linkedin icon"></i></a>
-        <h3 class="name">Yinglan Tan</h3>
-        <h3 class="title">Managing Partner</h3>
-        <h3 class="company">Insignia Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/yinglan.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/willsoncuaca"><i class="linkedin icon"></i></a>
-        <h3 class="name">Wilson Cuaca</h3>
-        <h3 class="title">Managing Partner</h3>
-        <h3 class="company">East Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/wilson.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/limky"><i class="linkedin icon"></i></a>
-        <h3 class="name">Kuo-Yi Lim</h3>
-        <h3 class="title">Managing Partner</h3>
-        <h3 class="company">Monk's Hill Ventures</h3>
-        <img class="ui rounded image" src="/speakers_images/kuoyi.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/arnaudbonzom"><i class="linkedin icon"></i></a>
-        <h3 class="name">Arnaud Bonzom</h3>
-        <h3 class="title">Venture Partner</h3>
-        <h3 class="company">500 Startups</h3>
-        <img class="ui rounded image" src="/speakers_images/arnaud.png">
-      </div>
-
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/cameronpriest"><i class="linkedin icon"></i></a>
-        <h3 class="name">Cameron Priest</h3>
-        <h3 class="title">Co-founder, CEO</h3>
-        <h3 class="company">Tradegecko</h3>
-        <img class="ui rounded image" src="/speakers_images/cameron.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/gracesai"><i class="linkedin icon"></i></a>
-        <h3 class="name">Grace Sai</h3>
-        <h3 class="title">Co-founder, CEO</h3>
-        <h3 class="company">The Hub Singapore</h3>
-        <img class="ui rounded image" src="/speakers_images/grace.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/vinodnair"><i class="linkedin icon"></i></a>
-        <h3 class="name">Vinod Nair</h3>
-        <h3 class="title">Founder, CEO</h3>
-        <h3 class="company">MoneySmart.Sg</h3>
-        <img class="ui rounded image" src="/speakers_images/vinod.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/pieterpaulwalraven"><i class="linkedin icon"></i></a>
-        <h3 class="name">Pieter Walraven</h3>
-        <h3 class="title">Product Manager</h3>
-        <h3 class="company">Google</h3>
-        <img class="ui rounded image" src="/speakers_images/pieter.png">
-      </div>
-
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/stevefeiner"><i class="linkedin icon"></i></a>
-        <h3 class="name">Steven Feiner</h3>
-        <h3 class="title">Co-founder, CEO</h3>
-        <h3 class="company">A Better Florist</h3>
-        <img class="ui rounded image" src="/speakers_images/steven.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/wei-zhu-1609bb1"><i class="linkedin icon"></i></a>
-        <h3 class="name">Wei Zhu</h3>
-        <h3 class="title">Founder, CEO</h3>
-        <h3 class="company">Axinan</h3>
-        <img class="ui rounded image" src="/speakers_images/weizhu.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/jiajih"><i class="linkedin icon"></i></a>
-        <h3 class="name">Jia Jih Chai</h3>
-        <h3 class="title">VP International</h3>
-        <h3 class="company">Carousell</h3>
-        <img class="ui rounded image" src="/speakers_images/jiajih.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.linkedin.com/in/titanlyy"><i class="linkedin icon"></i></a>
-        <h3 class="name">Titan Lee</h3>
-        <h3 class="title">Head of Growth</h3>
-        <h3 class="company">Tech in Asia</h3>
-        <img class="ui rounded image" src="/speakers_images/titan.png">
-      </div>
-    </div>
+    <!--Past Speakers-->
   </div>
 
 
   <div class="ui vertical partners-section center aligned segment">
     <div class="ui text header container">
-      <h1 class="ui header">Key Partners</h1>
+      <h1 class="ui header">Key Partners for 2018</h1>
     </div>
     <div class="ui text description container">
       <h3>Industry-defining brands that have helped make UNICON into what it is today.
@@ -454,7 +364,7 @@
 
   <div class="ui vertical agenda-section center aligned segment">
     <div class="ui text header container">
-      <h1 class="ui header">Agenda</h1>
+      <h1 class="ui header">Agenda for 2018</h1>
     </div>
 
     <div class="ui center aligned content grid container">
@@ -571,7 +481,8 @@
       <div class="sixteen wide mobile five wide tablet five wide computer column">
         <div class="ui raised card">
           <h2>Current Students</h2>
-          <h4>Undergrads + Postgrads</h4>
+          <h4>For All Current Students </h4>
+          <!--<h5>EARLY BIRD SPECIAL : S$30<br>UNICON PARTNER SPECIAL : S$25</h5>-->
           <h1>S$50</h1>
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
@@ -579,9 +490,18 @@
       </div>
       <div class="sixteen wide mobile five wide tablet five wide computer column">
         <div class="ui raised card">
-          <h2>Public</h2>
-          <h4>For tech enthusiasts</h4>
+          <h2>Recent Graduates</h2>
+          <h4>Class of 2016 Onwards</h4>
           <h1>S$100</h1>
+          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
+          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
+        </div>
+      </div>
+      <div class="sixteen wide mobile five wide tablet five wide computer column">
+        <div class="ui raised card">
+          <h2>Public</h2>
+          <h4>Open to all working adults</h4>
+          <h1>S$140</h1>
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
         </div>
