--- a/views/main.ejs
+++ b/views/main.ejs
@@ -187,9 +187,8 @@
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://sg.linkedin.com/in/albertshyy"><i class="linkedin icon"></i></a>
-        <h3 class="name">Albert Shyy</h3>
-        <h3 class="title">Principal</h3>
-        <h3 class="company">Burda Principal Investments</h3>
+        <h3 class="name" id="jacopo">Albert Shyy</h3>
+        <h3 class="company">Principal<br>Burda Principal Investments</h3>
         <img class="ui rounded image" src="/speakers_images/albert.png">
       </div>
 
@@ -203,7 +202,7 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://sg.linkedin.com/in/pkhushani"><i class="linkedin icon"></i></a>
         <h3 class="name" id="pankaj">Pankaj khushani</h3>
-        <h3 class="title" id="janil">Head of Analytics &amp; Platform Partnership SEA</h3>
+        <h3 class="title">Head of Analytics &amp; Platform Partnership SEA</h3>
         <h3 class="company">Google</h3>
         <img class="ui rounded image" src="/speakers_images/pankaj.png">
       </div>
