updated_agenda_and_video

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -69,9 +69,9 @@
     </div>
     <div class="ui center aligned text container">
       <a class="item" id="about" >About</a>
+      <a class="item" id="agenda">Agenda</a>
       <a class="item" id="speakers">Speakers</a>
       <a class="item" id="partners">Partners</a>
-      <a class="item" id="agenda">Agenda</a>
       <a class="item" id="pricing">Pricing</a>
       <a class="item" id="venue">Details</a>
       <a class="item" id="contact">Contact</a>
@@ -87,9 +87,9 @@
       <i class="remove icon"></i>
       <div class="ui list">
         <div class="item" id="about">About</div>
+        <div class="item" id="agenda">Agenda</div>
         <div class="item" id="speakers">Speakers</div>
         <div class="item" id="partners">Partners</div>
-        <div class="item" id="agenda">Agenda</div>
         <div class="item" id="pricing">Pricing</div>
         <div class="item" id="venue">Venue</div>
         <div class="item" id="contact">Contact</div>
@@ -109,6 +109,121 @@
       </h3>
     </div>
   </div>
+
+    <div class="ui vertical agenda-section center aligned segment">
+      <div class="ui text header container">
+        <h1 class="ui header">Agenda for 2019</h1>
+      </div>
+
+      <div class="ui center aligned content grid container">
+        <div class="sixteen wide mobile eight wide tablet seven wide computer column">
+          <div class="ui raised card">
+            <h2>DAY 1, FEBRUARY 23RD</h2>
+            <div class="event">
+              <h3 class="date">9:00 AM</h3>
+              <h3 class="title">REGISTRATION</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">10:00 AM</h3>
+              <h3 class="title">WELCOME KEYNOTE</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">10:30 AM</h3>
+              <h3 class="title">FOUNDER’S STORY</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">11:00 AM</h3>
+              <h3 class="title">PASSION AND PRACTICALITY</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">11:30 AM</h3>
+              <h3 class="title">BLOCKCHAIN:<br>BREAKING THE TRADITIONAL CHAIN</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">12:00 PM</h3>
+              <h3 class="title">LUNCH</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">1:00 PM</h3>
+              <h3 class="title">AFTERNOON PANEL DISCUSSIONS</h3>
+            </div>
+            <!--<div class="event">-->
+              <!--<h3 class="date"></h3>-->
+              <!--<h3 class="descripWeb">Technologies to build successful product</h3>-->
+              <!--<h3 class="descripMobile">Tech to build successful product</h3>-->
+            <!--</div>-->
+            <!--<div class="event">-->
+              <!--<h3 class="date"></h3>-->
+              <!--<h3 class="descripWeb">From students to entrepreneurs</h3>-->
+              <!--<h3 class="descripMobile">From students to entrepreneurs</h3>-->
+            <!--</div>-->
+            <!--<div class="event">-->
+              <!--<h3 class="date"></h3>-->
+              <!--<h3 class="descripWeb">Growth Hacking: Achieving hockey stick growth</h3>-->
+              <!--<h3 class="descripMobile">Growth Hacking: Hockey stick growth</h3>-->
+            <!--</div>-->
+            <!--<div class="event">-->
+              <!--<h3 class="date"></h3>-->
+              <!--<h3 class="descripWeb">View full agenda for more topics.</h3>-->
+              <!--<h3 class="descripMobile">View full agenda for more topics.</h3>-->
+            <!--</div>-->
+            <div class="event">
+              <h3 class="date">7:00PM</h3>
+              <h3 class="title">NETWORKING PARTY</h3>
+            </div>
+          </div>
+        </div>
+        <div class="sixteen wide mobile eight wide tablet seven wide computer column">
+          <div class="ui raised card">
+            <h2>DAY, FEBRUARY 24TH</h2>
+            <div class="event">
+              <h3 class="date">10:00 AM</h3>
+              <h3 class="title">CYBERSECURITY: <br>HOW SAFE ARE YOUR ASSETS?</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">10:30 AM</h3>
+              <h3 class="title">PIVOT YOUR WAY TO SUCCESS</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">11:00 AM</h3>
+              <h3 class="title">FINTECH: BIGGEST FISH IN S.E.A</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">12:00 PM</h3>
+              <h3 class="title">LUNCH</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">1:00 PM</h3>
+              <h3 class="title">ALIBABA AND THE 163 CHINESE UNICORNS</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">2:00 PM</h3>
+              <h3 class="title">BLACK MIRROR: DREAM OR DYSTOPIA</h3>
+            </div>
+            <!--<div class="event">-->
+              <!--<h3 class="date"></h3>-->
+              <!--<h3 class="descripWeb">UNICON Arena is a startup pitching competition where <br> <strong>top 10</strong> rising startups by young entrepreneurs will <br> pitch to top investors and walk away with attractive <br> prizes.</h3>-->
+              <!--&lt;!&ndash; <h3 class="descripMobile">UNICON Arena is a startup pitching <br> competition where top 10 rising <br>  startups by young entrepreneurs <br> will pitch to top investors and walk <br> away with attractive prizes. Stay <br> tuned for more details.</h3> &ndash;&gt;-->
+              <!--<h3 class="descripMobile">UNICON Arena is a startup pitching <br> competition where <strong>top 10</strong> rising <br> startups by young entrepreneurs will <br> pitch to top investors and walk away <br> with attractive prizes.</h3>-->
+            <!--</div>-->
+            <div class="event">
+              <h3 class="date">3:00 PM</h3>
+              <h3 class="title">UNICON ARENA</h3>
+            </div>
+            <div class="event">
+              <h3 class="date">5:00 PM</h3>
+              <h3 class="title">NETWORKING TEA</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="ui text description container">
+        <a href="https://drive.google.com/open?id=1ehNNnmjZPp7Szy45e8ZTPLcDlMaHlCod" class="big ui button">View Full Agenda</a>
+        <!--<a href="https://drive.google.com/open?id=19lolSDTE6VQvXxOo0QgtYcjyollKUnLh" class="arena big ui button">Learn UNICON Arena</a>-->
+        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui button">UNICON 2018 Video</a>
+      </div>
+    </div>
 
   <div class="ui vertical speakers-section center aligned segment">
     <div class="ui text header container">
@@ -361,113 +476,7 @@
 
   </div>
 
-  <div class="ui vertical agenda-section center aligned segment">
-    <div class="ui text header container">
-      <h1 class="ui header">Agenda for 2018</h1>
-    </div>
 
-    <div class="ui center aligned content grid container">
-      <div class="sixteen wide mobile eight wide tablet seven wide computer column">
-        <div class="ui raised card">
-          <h2>Day 1, February 24th</h2>
-          <div class="event">
-            <h3 class="date">9:00AM</h3>
-            <h3 class="title">Registration</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">10:00AM</h3>
-            <h3 class="title">Welcome Keynote</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">10:30AM</h3>
-            <h3 class="title">Founder's Story</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">11:00AM</h3>
-            <h3 class="title">Our Entrepreneurship Journey</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">12:00PM</h3>
-            <h3 class="title">Lunch</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">1:00PM</h3>
-            <h3 class="title">Afternoon Panel Discussions</h3>
-          </div>
-          <div class="event">
-            <h3 class="date"></h3>
-            <h3 class="descripWeb">Technologies to build successful product</h3>
-            <h3 class="descripMobile">Tech to build successful product</h3>
-          </div>
-          <div class="event">
-            <h3 class="date"></h3>
-            <h3 class="descripWeb">From students to entrepreneurs</h3>
-            <h3 class="descripMobile">From students to entrepreneurs</h3>
-          </div>
-          <div class="event">
-            <h3 class="date"></h3>
-            <h3 class="descripWeb">Growth Hacking: Achieving hockey stick growth</h3>
-            <h3 class="descripMobile">Growth Hacking: Hockey stick growth</h3>
-          </div>
-          <div class="event">
-            <h3 class="date"></h3>
-            <h3 class="descripWeb">View full agenda for more topics.</h3>
-            <h3 class="descripMobile">View full agenda for more topics.</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">7:00PM</h3>
-            <h3 class="title">Networking Party</h3>
-          </div>
-        </div>
-      </div>
-      <div class="sixteen wide mobile eight wide tablet seven wide computer column">
-        <div class="ui raised card">
-          <h2>Day 2, February 25th</h2>
-          <div class="event">
-            <h3 class="date">10:30AM</h3>
-            <h3 class="title">Bringing AI to Everyday Life</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">11:15AM</h3>
-            <h3 class="title">The Future of Blockchain &amp; Crypto</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">12:00PM</h3>
-            <h3 class="title">Lunch</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">1:00PM</h3>
-            <h3 class="title">China vs Silicon Valley</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">2:00PM</h3>
-            <h3 class="titleWeb">Southeast Asia: Making Sense of the Region</h3>
-            <h3 class="titleMobile">SEA: Making Sense of the Region</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">3:00PM</h3>
-            <h3 class="title">UNICON Arena</h3>
-          </div>
-          <div class="event">
-            <h3 class="date"></h3>
-            <h3 class="descripWeb">UNICON Arena is a startup pitching competition where <br> <strong>top 10</strong> rising startups by young entrepreneurs will <br> pitch to top investors and walk away with attractive <br> prizes.</h3>
-            <!-- <h3 class="descripMobile">UNICON Arena is a startup pitching <br> competition where top 10 rising <br>  startups by young entrepreneurs <br> will pitch to top investors and walk <br> away with attractive prizes. Stay <br> tuned for more details.</h3> -->
-            <h3 class="descripMobile">UNICON Arena is a startup pitching <br> competition where <strong>top 10</strong> rising <br> startups by young entrepreneurs will <br> pitch to top investors and walk away <br> with attractive prizes.</h3>
-          </div>
-          <div class="event">
-            <h3 class="date">5:30PM</h3>
-            <h3 class="title">Tea break</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui text description container">
-      <a href="https://drive.google.com/open?id=1ehNNnmjZPp7Szy45e8ZTPLcDlMaHlCod" class="big ui button">View Full Agenda</a>
-      <a href="https://drive.google.com/open?id=19lolSDTE6VQvXxOo0QgtYcjyollKUnLh" class="arena big ui button">Learn UNICON Arena</a>
-    </div>
-
-  </div>
 
 
   <div class="ui vertical pricing-section center aligned segment">
