--- a/views/main.ejs
+++ b/views/main.ejs
@@ -583,7 +583,7 @@
 </div>
 
 <div class="ui text center aligned contact-header container">
-  <h1 class="ui header">Get in touch</h1>
+  <h1 class="ui header">Get in touch!</h1>
 </div>
 
 <div class="ui text center aligned description container">
