updated website title

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="UNICON 2018 - Feb 24 &amp; 25, NUS, Singapore">
-  <title>Asia's Craziest Student Entrepreneurship Conference - UNICON 2018</title>
+  <title>Asia's Craziest Student Entrepreneurship Conference - UNICON 2019</title>
   <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
   <!-- Facebook Pixel Code -->
@@ -583,7 +583,7 @@
 </div>
 
 <div class="ui text center aligned contact-header container">
-  <h1 class="ui header">Get in touch!</h1>
+  <h1 class="ui header">Get in touch</h1>
 </div>
 
 <div class="ui text center aligned description container">
