updated Photo and fixed text overshot

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -317,7 +317,7 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://sg.linkedin.com/in/pkhushani"><i class="linkedin icon"></i></a>
         <h3 class="name" id="pankaj">Pankaj khushani</h3>
-        <h3 class="title">Head of Analytics &amp; Platform Partnership SEA</h3>
+        <h3 class="title">Head of Analytics &amp; <br>Platform Partnership SEA</h3>
         <h3 class="company">Google</h3>
         <img class="ui rounded image" src="/speakers_images/pankaj.png">
       </div>
