--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="UNICON 2019 - Feb 23 &amp; 24, NUS, Singapore">
   <title>Asia's Craziest Student Entrepreneurship Conference - UNICON 2019</title>
+  <link rel="icon" type="image/png" href="/speakers_images/favicon.png" sizes="48x48">
   <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
   <!-- Facebook Pixel Code -->
