--- a/views/main.ejs
+++ b/views/main.ejs
@@ -176,7 +176,7 @@
         </div>
         <div class="sixteen wide mobile eight wide tablet seven wide computer column">
           <div class="ui raised card">
-            <h2>DAY, FEBRUARY 24TH</h2>
+            <h2>DAY 2, FEBRUARY 24TH</h2>
             <div class="event">
               <h3 class="date">10:00 AM</h3>
               <h3 class="title">CYBERSECURITY: <br>HOW SAFE ARE YOUR ASSETS?</h3>
