took out full agenda

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -220,7 +220,7 @@
       </div>
 
       <div class="ui text description container">
-        <a href="https://drive.google.com/open?id=1ehNNnmjZPp7Szy45e8ZTPLcDlMaHlCod" class="big ui button">View Full Agenda</a>
+        <!--<a href="https://drive.google.com/open?id=1ehNNnmjZPp7Szy45e8ZTPLcDlMaHlCod" class="big ui button">View Full Agenda</a>-->
         <!--<a href="https://drive.google.com/open?id=19lolSDTE6VQvXxOo0QgtYcjyollKUnLh" class="arena big ui button">Learn UNICON Arena</a>-->
         <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui button">UNICON 2018 Video</a>
       </div>
