updated eventbrite link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -493,8 +493,8 @@
           <h4>For All Current Students </h4>
           <!--<h5>EARLY BIRD SPECIAL : S$30<br>UNICON PARTNER SPECIAL : S$25</h5>-->
           <h1>S$50</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="ui button" id="register">Register Now</a>
         </div>
       </div>
       <div class="sixteen wide mobile five wide tablet five wide computer column">
@@ -502,8 +502,8 @@
           <h2>Recent Graduates</h2>
           <h4>Class of 2016 Onwards</h4>
           <h1>S$100</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="ui button" id="register">Register Now</a>
         </div>
       </div>
       <div class="sixteen wide mobile five wide tablet five wide computer column">
@@ -511,8 +511,8 @@
           <h2>Public</h2>
           <h4>Open to all working adults</h4>
           <h1>S$140</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="eb"><h3>Early bird</h3></a>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button" id="register">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="ui button" id="register">Register Now</a>
         </div>
       </div>
     </div>
