--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="UNICON 2019 - Feb 23 &amp; 24, NUS, Singapore">
-  <title>Asia's Craziest Student Entrepreneurship Conference - UNICON 2020</title>
+  <meta name="description" content="Asia's first global entrepreneurship conference for students by students with the aim to connect student entrepreneurs all over the world and create a global network of innovators.">
+  <title>Asia's craziest startup conference for students by students - UNICON 2019</title>
   <link rel="icon" type="image/png" href="/speakers_images/favicon.png" sizes="48x48">
   <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
