updated new speakers

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -227,6 +227,91 @@
       </div>
     </div>
 
+    <div class="ui vertical speakers-section center aligned segment" id="speakers">
+      <div class="ui text header container">
+        <h1 class="ui header">Speakers for 2019</h1>
+      </div>
+      <div class="ui middle aligned equal width grid detail container">
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/ajeygore/"><i class="linkedin icon"></i></a>
+          <h3 class="name" id="Ajey_Gore">Ajey Gore</h3>
+          <h3 class="title">Group CTO</h3>
+          <h3 class="company">Go-Jek</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Ajey_Gore.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/aik-phong-ng-8b3560/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Ng Aik Phong</h3>
+          <h3 class="title">Managing Director</h3>
+          <h3 class="company">Fave</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Aik_Phong_Ng.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/arrif-ziaudeen-a72449a/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Arrif Ziaudeen</h3>
+          <h3 class="title">CEO</h3>
+          <h3 class="company">Chope</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Arrif_Ziaudeen.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/shanru-lai-b671a268/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Shanru Lai</h3>
+          <h3 class="title">Co-Founder</h3>
+          <h3 class="company">Shopback</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Shanru_Lai.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/julianhosp/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Dr. Julian Hosp</h3>
+          <h3 class="title">Co-Founder</h3>
+          <h3 class="company">TenX</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Dr_Julian_Hosp.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/mhlints/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Michael Lints</h3>
+          <h3 class="title">Partner</h3>
+          <h3 class="company">Golden Gate Ventures</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Michael_Lints.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/teck-yong-lim-62141032/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name">Lim Teck Yong</h3>
+          <h3 class="title">Head of Operations</h3>
+          <h3 class="company">Shopee</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Teck_Yong_Lim.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/sakhee/"><i class="linkedin icon"></i></a>
+          <h3 class="name">Sakhee Dheer</h3>
+          <h3 class="title">Head of Digital Marketing</h3>
+          <h3 class="company">Facebook</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/sakhee_dheer.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/chuakelvin/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
+          <h3 class="name" id="pankaj">Kelvin Chua</h3>
+          <h3 class="title">Head of Product R&D and Infrastructure</h3>
+          <h3 class="company">Circles.Life</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Kelvin_Chua.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/sagarsarbhai/"><i class="linkedin icon"></i></a>
+          <h3 class="name" id="pankaj">Sagar Sarbhai</h3>
+          <h3 class="title">Head of Government & Regulatory Relations</h3>
+          <h3 class="company">Ripple</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Sagar_Sarbhai.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/jupetan/"><i class="linkedin icon"></i></a>
+          <h3 class="name" id="pankaj">Jupe Tan</h3>
+          <h3 class="title">Managing Partner<br>Asia Pacific</h3>
+          <h3 class="company">Plug and Play</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Jupe_Tan.png">
+        </div>
+      <!--Present Speakers-->
+    </div>
+
   <div class="ui vertical speakers-section center aligned segment" id="speakers">
     <div class="ui text header container">
       <h1 class="ui header">Speakers for 2018</h1>
