--- a/views/main.ejs
+++ b/views/main.ejs
@@ -139,7 +139,7 @@
             </div>
             <div class="event">
               <h3 class="date">11:30 AM</h3>
-              <h3 class="title">BLOCKCHAIN:<br>BREAKING THE TRADITIONAL CHAIN</h3>
+              <h3 class="title">BLOCKCHAIN: BREAKING THE TRADITIONAL CHAIN</h3>
             </div>
             <div class="event">
               <h3 class="date">12:00 PM</h3>
@@ -180,7 +180,7 @@
             <h2>DAY 2, FEBRUARY 24TH</h2>
             <div class="event">
               <h3 class="date">10:00 AM</h3>
-              <h3 class="title">CYBERSECURITY: <br>HOW SAFE ARE YOUR ASSETS?</h3>
+              <h3 class="title">CYBERSECURITY: HOW SAFE ARE YOUR ASSETS?</h3>
             </div>
             <div class="event">
               <h3 class="date">10:30 AM</h3>
@@ -283,8 +283,8 @@
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/sakhee/"><i class="linkedin icon"></i></a>
-          <h3 class="name">Sakhee Dheer</h3>
-          <h3 class="title">Head of Digital Marketing</h3>
+          <h3 class="name" id="pankaj">Sakhee Dheer</h3>
+          <h3 class="title">Head of Digital, Global<br>Business Marketing</h3>
           <h3 class="company">Facebook</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/sakhee_dheer.png">
         </div>
