changed spelling errors

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -56,7 +56,7 @@
       </video> -->
       <img class="ui image" id="gif" src="/speakers_images/bangg.gif">
       <img class="ui image" id="logo" src="/speakers_images/uniconLogoBig.png">
-      <h1 id="first">Creating the unicon of tomorrow</h1>
+      <h1 id="first">Creating the unicorns of tomorrow</h1>
       <!-- <h1 id="fisrt">Asia's Craziest Collegiate Entrepreneurship Conference</h1> -->
       <h1 id="second">CRAZIEST</h1>
       <h1 id="third">Student Conference on Tech and Entrepreneurship</h1>
