--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -916,6 +916,12 @@
     padding: 0px;
   }
 
+  .speakers-section.segment .detail.container .column  h3 {
+    z-index: 1;
+    position: absolute;
+    bottom: 0%;
+  }
+
   .speakers-section.segment .detail.container .column  .info {
     font-size: 12px;
     color: lightgrey;
@@ -1099,6 +1105,12 @@
     position: relative;
     height: 100%;
     padding: 4px;
+  }
+
+  .speakers-section.segment .detail.container .column  h3 {
+    z-index: 1;
+    position: absolute;
+    bottom: 0%;
   }
 
   .speakers-section.segment .detail.container .column  .info {
