--- a/views/main.ejs
+++ b/views/main.ejs
@@ -218,7 +218,7 @@
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/arrif-ziaudeen-a72449a/?originalSubdomain=sg"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name" id="no_warp">Arrif Ziaudeen</div><br>CEO<br>Chope</h3>
+          <h3 class="info"><div class="name" id="no_warp">Arrif Ziaudeen</div><br>Founder and CEO<br>Chope</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Arrif_Ziaudeen.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
@@ -260,6 +260,11 @@
           <a href="https://www.linkedin.com/in/jupetan/"><i class="linkedin icon"></i></a>
           <h3 class="info"><div class="name">Jupe Tan</div><br>Managing Partner Asia Pacific<br>Plug and Play</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Jupe_Tan.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/jstona/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Jon Stona</div><br>Head of APAC Marketing<br>Stripe</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Jon_Stona.png">
         </div>
       <!--Present Speakers-->
     </div>
